{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 387,
  "lineage": "147be06c-6ebe-16d7-7882-53f3d901dba4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b7b0847d7e1c10b6",
            "arn": "arn:aws:ec2:ap-northeast-2:499514681453:elastic-ip/eipalloc-0b7b0847d7e1c10b6",
            "association_id": "eipassoc-037f86249c6889b9e",
            "domain": "vpc",
            "id": "eipalloc-0b7b0847d7e1c10b6",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0df7611d5134c3033",
            "private_dns": "ip-10-0-0-60.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.60",
            "public_dns": "ec2-15-165-129-211.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.129.211",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "graviton_box",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e83068ac0ed5fd47",
            "arn": "arn:aws:ec2:ap-northeast-2:499514681453:instance/i-05aefdefb87afd23e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 16,
                "threads_per_core": 1
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "GetStartedEKS_Profile",
            "id": "i-05aefdefb87afd23e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7g.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "aws-kp-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02855dcdcb8c1ddff"
              }
            ],
            "primary_network_interface_id": "eni-02855dcdcb8c1ddff",
            "private_dns": "ip-10-0-0-68.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.68",
            "public_dns": "ec2-3-34-182-75.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.34.182.75",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-086c9b41c0a4cb361",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dc60f30d9c7636e0",
            "tags": {
              "Name": "code-server-graviton"
            },
            "tags_all": {
              "Name": "code-server-graviton"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-051beb3868dec1706"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.eks_creator_profile",
            "aws_iam_role.eks_creator_role",
            "aws_security_group.instance_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.al2023_arm64",
            "data.aws_availability_zones.available",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "x86_box",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03fd85ef2fae79c05",
            "arn": "arn:aws:ec2:ap-northeast-2:499514681453:instance/i-056ffeabe3e24570b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "GetStartedEKS_Profile",
            "id": "i-056ffeabe3e24570b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c6i.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "aws-kp-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0cf202264975e7824"
              }
            ],
            "primary_network_interface_id": "eni-0cf202264975e7824",
            "private_dns": "ip-10-0-0-224.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.224",
            "public_dns": "ec2-43-202-5-201.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.202.5.201",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f2865421eb4ebfbe",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dc60f30d9c7636e0",
            "tags": {
              "Name": "code-server-x86"
            },
            "tags_all": {
              "Name": "code-server-x86"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-051beb3868dec1706"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.eks_creator_profile",
            "aws_iam_role.eks_creator_role",
            "aws_security_group.instance_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.al2023_x86_64",
            "data.aws_availability_zones.available",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:499514681453:internet-gateway/igw-054ff542c5d8086d1",
            "id": "igw-054ff542c5d8086d1",
            "owner_id": "499514681453",
            "region": "ap-northeast-2",
            "vpc_id": "vpc-00b61207bfab02351"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b7b0847d7e1c10b6",
            "association_id": "eipassoc-037f86249c6889b9e",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0ba51e9995e7b4c3d",
            "network_interface_id": "eni-0df7611d5134c3033",
            "private_ip": "10.0.0.60",
            "public_ip": "15.165.129.211",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dc60f30d9c7636e0",
            "vpc_id": "vpc-00b61207bfab02351"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:499514681453:route-table/rtb-02a9239b24b058bc3",
            "id": "rtb-02a9239b24b058bc3",
            "owner_id": "499514681453",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ba51e9995e7b4c3d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00b61207bfab02351"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:499514681453:route-table/rtb-0ab3ee5b045a0bc40",
            "id": "rtb-0ab3ee5b045a0bc40",
            "owner_id": "499514681453",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-054ff542c5d8086d1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00b61207bfab02351"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0627158eeb991fc70",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-02a9239b24b058bc3",
            "subnet_id": "subnet-056f17f24a18f7075"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037dc3bac60c5102f",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-02a9239b24b058bc3",
            "subnet_id": "subnet-006e01c1a005b5aa3"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf3c048aba43e2db",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-02a9239b24b058bc3",
            "subnet_id": "subnet-0ce0ae2c5247ec02e"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093d9ee14f0c4bc98",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-02a9239b24b058bc3",
            "subnet_id": "subnet-08303b9489542c242"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b086934bcc1cc9c9",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0ab3ee5b045a0bc40",
            "subnet_id": "subnet-0dc60f30d9c7636e0"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d9bbea7f62cd7df",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0ab3ee5b045a0bc40",
            "subnet_id": "subnet-0c9589e57ac38a4a0"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0106ae3205c12ef97",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0ab3ee5b045a0bc40",
            "subnet_id": "subnet-022b147d9c22af883"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bc92fa498bea194",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0ab3ee5b045a0bc40",
            "subnet_id": "subnet-0db8fad220d630d4f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:499514681453:security-group/sg-051beb3868dec1706",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051beb3868dec1706",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": null,
                "from_port": 8150,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8150
              },
              {
                "cidr_blocks": [
                  "122.36.213.114/32",
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "122.36.213.114/32"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "122.36.213.114/32"
                ],
                "description": null,
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "eks-host-sg",
            "name_prefix": "",
            "owner_id": "499514681453",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00b61207bfab02351"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:499514681453:subnet/subnet-056f17f24a18f7075",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056f17f24a18f7075",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "499514681453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "GSE-priv-subnet-1",
              "karpenter.sh/discovery": "get-started-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "GSE-priv-subnet-1",
              "karpenter.sh/discovery": "get-started-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00b61207bfab02351"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:499514681453:subnet/subnet-006e01c1a005b5aa3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006e01c1a005b5aa3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "499514681453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "GSE-priv-subnet-2",
              "karpenter.sh/discovery": "get-started-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "GSE-priv-subnet-2",
              "karpenter.sh/discovery": "get-started-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00b61207bfab02351"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:499514681453:subnet/subnet-0ce0ae2c5247ec02e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce0ae2c5247ec02e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "499514681453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "GSE-priv-subnet-3",
              "karpenter.sh/discovery": "get-started-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "GSE-priv-subnet-3",
              "karpenter.sh/discovery": "get-started-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00b61207bfab02351"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:499514681453:subnet/subnet-08303b9489542c242",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2d",
            "availability_zone_id": "apne2-az4",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08303b9489542c242",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "499514681453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "GSE-priv-subnet-4",
              "karpenter.sh/discovery": "get-started-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "GSE-priv-subnet-4",
              "karpenter.sh/discovery": "get-started-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00b61207bfab02351"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:499514681453:subnet/subnet-0dc60f30d9c7636e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc60f30d9c7636e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "499514681453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "GSE-pub-subnet-1",
              "kubernetes.io/cluster/get-started-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "GSE-pub-subnet-1",
              "kubernetes.io/cluster/get-started-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00b61207bfab02351"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:499514681453:subnet/subnet-0c9589e57ac38a4a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9589e57ac38a4a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "499514681453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "GSE-pub-subnet-2",
              "kubernetes.io/cluster/get-started-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "GSE-pub-subnet-2",
              "kubernetes.io/cluster/get-started-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00b61207bfab02351"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:499514681453:subnet/subnet-022b147d9c22af883",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022b147d9c22af883",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "499514681453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "GSE-pub-subnet-3",
              "kubernetes.io/cluster/get-started-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "GSE-pub-subnet-3",
              "kubernetes.io/cluster/get-started-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00b61207bfab02351"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:499514681453:subnet/subnet-0db8fad220d630d4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2d",
            "availability_zone_id": "apne2-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db8fad220d630d4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "499514681453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "GSE-pub-subnet-4",
              "kubernetes.io/cluster/get-started-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "GSE-pub-subnet-4",
              "kubernetes.io/cluster/get-started-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00b61207bfab02351"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:499514681453:vpc/vpc-00b61207bfab02351",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04675a02d2af87a66",
            "default_route_table_id": "rtb-0ec9c47d2e3da4420",
            "default_security_group_id": "sg-0bf877725443913b5",
            "dhcp_options_id": "dopt-0982ced1e427026b0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00b61207bfab02351",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec9c47d2e3da4420",
            "owner_id": "499514681453",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "get-started-eks"
            },
            "tags_all": {
              "Name": "get-started-eks"
            }
          }
        }
      ]
    }
  ]
}